--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
 html {
     scroll-behavior: smooth;
 }
-
+a{
+    text-decoration: none;
+}
 /* general classes  */
 .container {
     width: 84%;
@@ -23,10 +25,7 @@ html {
 
 
 .primary-btn {
-    /* background: rgba(222, 7, 75, 0.793); */
-    /* background: rgba(18, 22, 223, 0.793); */
-    background: linear-gradient(90deg, rgba(63,89,251,1) 0%, rgba(252,70,107,1) 100%);
-
+    background: rgba(252, 70, 107, 1);
     color: white;
     margin: 10px 0;
     font-size: 1.2em;
@@ -40,6 +39,26 @@ html {
     cursor: pointer;
     border: none;
     border-radius: 8px;
+    transition: 0.3s all;
+}
+
+.primary-second {
+    background: white;
+    color: #161616 !important;
+    border: 1px solid #ad0537;
+}
+
+.primary-btn:hover {
+    background-color: #ad0537;
+    color: white;
+}
+
+.blog-btn {
+    background-color: #ad0537;
+}
+
+.match-btn {
+    background-color: #ad0537;
 }
 
 /* ..................  */
@@ -50,7 +69,7 @@ html {
     align-items: center;
     justify-content: space-between;
     height: 80vh;
-    background-color: rgb(8, 2, 33);
+    background-color: #081229;
     margin-top: 3em;
     color: white;
     overflow: hidden;
@@ -97,7 +116,7 @@ html {
     justify-content: space-between;
 }
 
-.tabs{
+.tabs {
     width: 23.5%;
     margin-bottom: 2em;
     display: flex;
@@ -107,21 +126,17 @@ html {
     padding: 1.5em 0;
     height: 312px;
     border-radius: 8px;
-    background-color: rgb(8, 2, 33);
+    background-color: #081229;
 }
-.tabs > button{
+
+.tabs>button {
     width: 80%;
 }
-.primary-btn:nth-child(1), .primary-btn:nth-child(2){
-    background: white;
-    color: #161616;
-    border: 1px solid #161616;
-}
+
 .card-container {
     width: 74.5%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -129,11 +144,18 @@ html {
     width: 31.6%;
     margin-bottom: 1.5em;
     border-radius: 0.5em;
+    overflow: hidden;
 }
 
 .card-image {
     width: 100%;
     height: 175px;
+    transition: 1s all;
+    overflow: hidden;
+}
+
+.card-image:hover {
+    transform: scaleX(1.1);
 }
 
 .card-image>img {
@@ -158,7 +180,7 @@ html {
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
-    color:rgba(22, 22, 22, 0.7);
+    color: rgba(22, 22, 22, 0.7);
 }
 
 .card-primary_text {
@@ -171,10 +193,38 @@ html {
     margin-top: 5px;
     color: rgba(22, 22, 22, 0.7);
 }
-.tablet{
+
+/* ....................... */
+.flag-card {
+    border: 1px solid rgba(22, 22, 22, 0.5);
+    ;
+    height: 242px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.flag-container {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2em;
+}
+
+.flag-text {
+    color: rgba(22, 22, 22, 0.8);
+    margin: 0.5em 0;
+}
+
+
+.tablet {
     display: none;
     margin: 2em auto;
 }
+
 .fa-clock,
 .fa-message {
     margin-right: 8px;
@@ -186,32 +236,80 @@ html {
 
 /* ...................... */
 
-.footer{
+.footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 350px;
-    background: #161616;
+    height: 400px;
+    background-color: #081229;
 }
-.footer-container{
+
+.footer-container {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    flex-direction: column; 
-    height: 200px; 
+    flex-direction: column;
+    height: 200px;
     color: white;
 }
-.brand-container{
+
+.brand-container {
     margin-top: 2em;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
     width: 80%;
+    color: rgb(147, 145, 145);
 }
-.line{
+
+.brand-container>span:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.footer-primary_text {
+    font-size: 35px;
+    margin: 1em auto;
+    color:white;
+    text-decoration: none;
+}
+ 
+.footer-primary_text:hover {
+    color: rgba(252, 70, 107, 1);
+}
+
+.footer-secondary_text {
+    font-size: 13px;
+    color: rgb(147, 145, 145);
+    text-align: center;
+    margin: 0.5em 0;
+}
+
+.line {
     margin-top: 1em;
     width: 100%;
+    border: 0.5px solid rgb(147, 145, 145);
 }
+
+.social-container {
+    margin-top: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 150px;
+    font-size: 25px;
+}
+
+.social-container>a {
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.social-container>a:hover {
+    color: rgba(252, 70, 107, 1);
+}
+
 /* media query  */
 
 /* for tablet  */
@@ -225,9 +323,11 @@ html {
     .hero {
         height: 400px;
     }
+
     .match-section {
         margin: 3em 0;
     }
+
     .hero-text {
         padding: 0 1em 0 4em;
     }
@@ -255,7 +355,8 @@ html {
     .match-container {
         flex-direction: column;
     }
-    .tabs{
+
+    .tabs {
         width: 100%;
         margin-bottom: 2em;
         flex-direction: row;
@@ -263,39 +364,61 @@ html {
         background: none;
         justify-content: space-between;
     }
-    .tabs > button{
+
+    .tabs>button {
         width: 32%;
     }
-    .primary-btn:nth-child(1), .primary-btn:nth-child(2){
-        background: white;
-        color: #161616;
-        border: 1px solid #161616;
-    }
-    .card-container{
+
+    .card-container {
         width: 100%;
     }
-    .card{
+
+    .card {
         width: 48%;
     }
+
     .card:nth-child(7),
     .card:nth-child(8),
-    .card:nth-child(9){
+    .card:nth-child(9) {
         display: none;
     }
+
     .card-image {
         width: 100%;
         height: 210px;
     }
+
     .card-primary_text {
         font-size: 20px;
     }
+
     .card-secondary_text {
         font-size: 18px;
     }
-    .tablet{
+
+    .tablet {
         display: block;
     }
+
     /* ...................  */
+    .brand-container {
+        justify-content: center;
+    }
+
+    .brand-container>span {
+        text-align: center;
+        width: 22%;
+        font-size: 13px;
+        line-height: 50px;
+    }
+
+    .flag-container {
+        width: 75%;
+    }
+
+    .footer {
+        height: 500px;
+    }
 }
 
 /* end tablet query  */
@@ -354,14 +477,16 @@ html {
 
     /* ................... */
 
-     /* match container  */
-     .match-section {
+    /* match container  */
+    .match-section {
         margin: 2em 0;
     }
-     .match-container {
+
+    .match-container {
         flex-direction: column;
     }
-    .tabs{
+
+    .tabs {
         width: 100%;
         margin-bottom: 2em;
         flex-direction: column;
@@ -369,30 +494,43 @@ html {
         padding: 1.5em 0;
         background: none;
     }
-    .tabs > button{
+
+    .tabs>button {
         width: 90%;
     }
-    .primary-btn:nth-child(1), .primary-btn:nth-child(2){
-        background: aliceblue;
-        color: #161616;
-        border: 1px solid #161616;
-    }
-    .card-container{
+
+    .card-container {
         width: 100%;
     }
-    .card{
+
+    .card {
         width: 100%;
     }
+
     .card-image {
         width: 100%;
         height: 210px;
     }
+
     .card-secondary_text {
         font-size: 18px;
     }
+
     /* ...................  */
+    .footer {
+        height: 650px;
+    }
 
+    .brand-container {
+        justify-content: center;
+    }
 
+    .brand-container>span {
+        text-align: center;
+        width: 100%;
+        font-size: 14px;
+        line-height: 50px;
+    }
 }
 
 
